@@ -18,7 +18,7 @@
 .\" * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 .\" * KIND, either express or implied.
 .\" *
-.\" * $Id: curl.1,v 1.248 2008-06-08 21:04:46 bagder Exp $
+.\" * $Id: curl.1,v 1.249 2008-07-03 06:56:03 bagder Exp $
 .\" **************************************************************************
 .\"
 .TH curl 1 "5 June 2008" "Curl 7.19.0" "Curl Manual"
@@ -1241,8 +1241,12 @@ The time, in seconds, it took from the start until the name resolving was
 completed.
 .TP
 .B time_connect
-The time, in seconds, it took from the start until the connect to the remote
-host (or proxy) was completed.
+The time, in seconds, it took from the start until the TCP connect to the
+remote host (or proxy) was completed.
+.TP
+.B time_appconnect
+The time, in seconds, it took from the start until the SSL/SSH/etc
+connect/handshake to the remote host was completed. (Added in 7.19.0)
 .TP
 .B time_pretransfer
 The time, in seconds, it took from the start until the file transfer is just
