@@ -18,7 +18,7 @@
 .\" * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 .\" * KIND, either express or implied.
 .\" *
-.\" * $Id: curl_easy_getinfo.3,v 1.35 2008-06-08 22:00:42 bagder Exp $
+.\" * $Id: curl_easy_getinfo.3,v 1.36 2008-07-03 06:56:03 bagder Exp $
 .\" **************************************************************************
 .\"
 .TH curl_easy_getinfo 3 "21 Mar 2006" "libcurl 7.15.4" "libcurl Manual"
@@ -71,6 +71,12 @@ start until the name resolving was completed.
 .IP CURLINFO_CONNECT_TIME
 Pass a pointer to a double to receive the time, in seconds, it took from the
 start until the connect to the remote host (or proxy) was completed.
+.IP CURLINFO_APPCONNECT_TIME
+Pass a pointer to a double to receive the time, in seconds, it took from the
+start until the SSL/SSH connect/handshake to the remote host was completed.
+This time is most often very near to the PRETRANSFER time, except for cases
+such as HTTP pippelining where the pretransfer time can be delayed due to
+waits in line for the pipeline and more. (Added in 7.19.0)
 .IP CURLINFO_PRETRANSFER_TIME
 Pass a pointer to a double to receive the time, in seconds, it took from the
 start until the file transfer is just about to begin. This includes all
@@ -190,29 +196,33 @@ An overview of the six time values available from curl_easy_getinfo()
 
 curl_easy_perform()
     |
-    |--NT
-    |--|--CT
-    |--|--|--PT
-    |--|--|--|--ST
-    |--|--|--|--|--TT
-    |--|--|--|--|--RT
+    |--NAMELOOKUP
+    |--|--CONNECT
+    |--|--|--APPCONNECT
+    |--|--|--|--PRETRANSFER
+    |--|--|--|--|--STARTTRANSFER
+    |--|--|--|--|--|--TOTAL
+    |--|--|--|--|--|--REDIRECT
 .FI
-.IP NT
+.IP NAMELOOKUP
 \fICURLINFO_NAMELOOKUP_TIME\fP. The time it took from the start until the name
 resolving was completed.
-.IP CT
+.IP CONNECT
 \fICURLINFO_CONNECT_TIME\fP. The time it took from the start until the connect
 to the remote host (or proxy) was completed.
-.IP PT
+.IP APPCONNECT
+\fICURLINFO_APPCONNECT_TIME\fP. The time it took from the start until the SSL
+connect/handshake with the remote host was completed. (Added in in 7.19.0)
+.IP PRETRANSFER
 \fICURLINFO_PRETRANSFER_TIME\fP. The time it took from the start until the
 file transfer is just about to begin. This includes all pre-transfer commands
 and negotiations that are specific to the particular protocol(s) involved.
-.IP ST
+.IP STARTTRANSFER
 \fICURLINFO_STARTTRANSFER_TIME\fP. The time it took from the start until the
 first byte is just about to be transferred.
-.IP TT
+.IP TOTAL
 \fICURLINFO_TOTAL_TIME\fP. Total time of the previous request.
-.IP RT
+.IP REDIRECT
 \fICURLINFO_REDIRECT_TIME\fP. The time it took for all redirection steps
 include name lookup, connect, pretransfer and transfer before final
 transaction was started. So, this is zero if no redirection took place.
